# connector-google-dv-360

./: .example.secret.toml  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.py  main.py  pyproject.toml  requirements.txt  settings.toml
src/adapters/: databases.py  orm.py
src/commons/: logger.py
src/commons/abstracts/: unity_of_work.py
src/routers/: v1.py
src/routers/resources/: google_dv360.py  googleads_dv360.py  health_check.py
src/schemas/: googleads_dv360.py
src/services/query/: health_check.py
src/utils/: samples_util.py
