[tool.poetry]
name = "connector-google-dv-360"
version = "0.1.0"
description = "connector-google-dv-360-api"
authors = ["moreirak14 <kaiquemoreiracloud@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^2.18.1"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
